# rust_sdl2

./: Cargo.toml  LICENSE  README.md
src/: main.rs
