[package]
name = "rust_sdl2_01"
version = "0.1.0"
authors = ["jhook <c.exigua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# sdl2 = "0.34.2"

[dependencies.sdl2]
version = "0.34.2"
default-features = true
features = ["ttf"]